Product Page Frontend

--- a/bootstrap-5.2.3-dist/css/style.css
+++ b/bootstrap-5.2.3-dist/css/style.css
@@ -235,6 +235,9 @@ Reusable Custom Classes
 .border_pink{
     border: 1px solid #F40F6F;
 }
+.border_lightpink {
+    border: 1px solid rgb(248, 111, 169);
+}
 /*=============================
 Reusable Custom Classes
 ==============================*/
